# Secure_Drone

./: .gitignore  BUG_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LAYER_SEPARATION.md  QUICK_REFERENCE.md  README.md  REFACTORING_SUMMARY.md  RES.md  TESTING_GUIDE.md  demo_key_management.py  main.py  pyproject.toml  train_and_test.py
GCS/: README.md  config.yaml  gcs_client.py  mission_sender.py  requirements.txt  telemetry_viewer.py
attack_tests/: attack_orchestrator.py
attack_tests/results/: attack_test_results_20260105_184524.json  attack_test_summary_20260105_184524.json
attacker/: README.md  attacker.py  command_injection.py  config.yaml  dos_flood.py  gps_spoof.py  requirements.txt
companion_comp/: README.md  aegis_proxy.py  config.yaml  requirements.txt
companion_comp/behavior_ids/: temporal_model.py
companion_comp/crypto_layer/: crypto_gate.py  decryptor.py  encryptor.py  key_manager.py  key_metadata.json  nonce_manager.py  root_key.pem
companion_comp/decision_engine/: risk_aggregator.py
companion_comp/logger/: explainability.py
companion_comp/shadow_execution/: physics_constraints.py
crypto_layer/: decryptor.py  encryptor.py  key_manager.py  key_metadata.json  nonce_manager.py  root_key.pem  test_crypto.py
datasets/: metadata.json  test.csv  train.csv  val.csv
docs/: architecture.md  demo_flow.md  deployment_guide.md  threat_model.md
models/intent_model/: intent_classifier.txt  model_metadata.json  risk_regressor.txt  training_metrics.json
src/: integrated_pipeline.py  logging_config.py
src/ai_layer/: WORKFLOW.py  data_logger.py  decision_gate.py  feature_extractor.py  inference.py  integration_example.py  intent_firewall.py  intent_labels.py  mode_aware_ids.py  model_evaluation.py  shadow_executor.py  test_feature_pipeline.py  test_inference.py  train_model.py  train_model_v2.py  trust_model.py
src/ai_layer/attack_detection/: __init__.py  dos_detector.py  injection_detector.py  replay_detector.py
src/ai_layer/ml_models/: __init__.py  dataset_generator.py  feature_extractor.py  inference.py
src/crypto_layer/: crypto_gate.py  decryptor.py  encryptor.py  key_manager.py  nonce_manager.py
src/decision_engine/: explainable_logger.py  safe_mode.py  test_decision_engine.py
src/digital_twin/: __init__.py
src/mavlink_proxy/: command_intake.py  packet_listener.py
src/simulator/: arm_and_takeoff.py  mavsdk_connect.py  read_telemetry.py
test/: INTEGRATED_TEST_README.md  test_ai_layer.py  test_ai_layer_fast.py  test_ai_layer_fast_logged.py  test_crypto.py  test_integrated_crypto_ai_attacks.py  test_log.md  test_no_crypto.py  test_without_aegis.py
